import javax.swing.*;

public class SpadePlayingCard extends PlayingCard{

    public SpadePlayingCard(int value, String name, ImageIcon cardImage){
          this.suit = "Spade";
          this.value = value;
          this.name = name;
          this.cardImage = cardImage;
    }



}
